--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header id="home" class="primary-back-middle">
         <nav class="container navigation">
+            <button class="menu-botton"><img src="images/menu.svg"></button>
             <ul class="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
