--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <iframe class="working-video" src="https://www.youtube.com/embed/HYsz1hP0BFo?si=V8qkUOft_yQCB0vb" 
                     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
     </main>
     <footer id="contacts" class="dark-blue footer">
@@ -72,5 +73,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
